AB#76 fixing z-index issues in main menu

--- a/src/Web/WebInbox-ImapSmtp/client/src/components/main-bar/main-bar.scss
+++ b/src/Web/WebInbox-ImapSmtp/client/src/components/main-bar/main-bar.scss
@@ -25,6 +25,7 @@
     align-items: center;
     white-space: nowrap;
     /*margin-bottom:2px;*/
+    z-index: 9999;
 
 
     margin-left: 0px;
